--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-Faker = "14.2.0"
-Flask = "2.2.2"
-Flask-Migrate = "3.1.0"
-flask-sqlalchemy = "3.0.3"
-Werkzeug = "2.2.2"
-importlib-resources = "5.10.0"
-ipdb = "0.13.9"
-pytest = "7.1.3"
+Faker = "*"
+flask-sqlalchemy = "*"
+Werkzeug = "*"
+importlib-resources = "*"
+ipdb = "*"
+pytest = "*"
 flask-restful = "*"
 sqlalchemy-serializer = "*"
+flask = "*"
+flask-migrate = "*"
 
 [requires]
 python_full_version = "3.8.13"
